# TChess

./: CMakeLists.txt  LICENSE  Main.cpp  README.md  RenderWindow.h
Board/: Board.cpp  Board.h
GameLoop/: Main.cpp
RenderWindow/: RenderWindow.cpp
moveLogic/: Move.cpp  Move.h  MoveGenerator.cpp  MoveGenerator.h
pieces/: Piece.cpp  Piece.h
